--- a/Source/Blazorise.Bootstrap/wwwroot/blazorise.bootstrap.css
+++ b/Source/Blazorise.Bootstrap/wwwroot/blazorise.bootstrap.css
@@ -98,6 +98,9 @@
     max-height: var(--autocomplete-menu-max-height, 200px);
     overflow-y: scroll; }
 
+.snackbar-stack {
+    z-index: 1059 !important; }
+
 .snackbar {
     z-index: 1060 !important; }
 
